--- a/resources/public/css/kostlee.css
+++ b/resources/public/css/kostlee.css
@@ -1,5 +1,10 @@
+html {
+  height: 100%;
+  font-size: 100%;
+}
 body {
-  font-family: sans-serif;
+  height: 100%;
+  padding-top: 1rem;
 }
 
 /** Rickshaw override **/
@@ -7,17 +12,51 @@ body {
   border: none;
 }
 
-/** Graphs **/
-.graph-container {
-  position: relative;
-  width: 630px;
-}
-.graph-container:after {
+/** Utils **/
+.cf:after {
   content: ' ';
   display: table;
   clear: both;
 }
 
+/** Facts **/
+.smallFact {
+  height: 100px;
+  position: relative;
+  margin-bottom: 1rem;
+}
+.fact {
+  font-size: 30px;
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  width: 120px;
+  line-height: 100px;
+  text-align: right;
+  border-right: 3px solid whitesmoke;
+  padding-right: 10px;
+}
+.factContent {
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  left: 135px;
+  padding-left: 10px;
+  width: 230px;
+}
+
+/** Icons **/
+.icon-man {
+  width: 16px;
+  height: 46px;
+  margin-right: 1px;
+}
+.icon-moneybag {
+  width: 100px;
+  height: 100px;
+}
+
+/** Graphs **/
 .legend {
   display: inline-block;
   position: relative;
@@ -45,4 +84,3 @@ body {
   width: 600px;
   display: inline-block;
 }
-
