--- a/resources/public/css/kostlee.css
+++ b/resources/public/css/kostlee.css
@@ -7,11 +7,20 @@ body {
   padding-top: 1rem;
 }
 footer {
-  padding: 1rem 0;
+  padding: 2rem 0;
 }
 
+/** CTA **/
 .bg-clouds {
-  background-color: #ecf0f1;
+  background-color: #222;
+  color: #fff;
+  padding: 3rem;
+}
+.ctaGasroot {
+  margin: 0 auto;
+}
+.ctaList li {
+  list-style-type: square;
 }
 
 /** Utils **/
@@ -44,7 +53,7 @@ footer {
   position: absolute;
   left: 135px;
   padding-left: 10px;
-  width: 230px;
+  max-width: 230px;
 }
 
 /** Graphs **/
